deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-node-1780005790492-lz98
  labels:
    app.kubernetes.io/name: test-node-1780005790492-lz98
    platform.managed-by: argocd
