deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-node-1780005790492-lz98
  namespace: test-node-1780005790492-lz98
  labels:
    app: test-node-1780005790492-lz98
    app.kubernetes.io/name: test-node-1780005790492-lz98
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: idp-test-node-1780005790492-lz98
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-node-1780005790492-lz98
  template:
    metadata:
      labels:
        app: test-node-1780005790492-lz98
        app.kubernetes.io/name: test-node-1780005790492-lz98
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001

      nodeSelector:
        kubernetes.io/arch: arm64

      containers:
        - name: app
          image: 948881762705.dkr.ecr.us-east-1.amazonaws.com/idp-test-node-1780005790492-lz98:e5c6ff4bcfde1b377687bd821b59b5ea501144b8
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:

            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 600m
              memory: 512Mi

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
